Fixing offline previews string switch

The parameters to Create() were swapped.

Bug: 794626
Change-Id: I07efdb86556b36e6e66f2827f6887f184013a6c7
Reviewed-on: https://chromium-review.googlesource.com/825304
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Commit-Queue: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523871}
Former-commit-id: e72881ed26f70c843f017017887cf45ddb06c7ba